From 1a2b107 (parabolic-cylinder):
=================================

In scripts/run_prisim.py,

(*) Remove some leftover code from the merge with the branch
parabolic-cylinder that used old timestamps_JD
(*) Check for presence of PyGSM module and start a set_trace() if
absent

In prisim/interferometry.py,

(*) In member function observe() of class InterferometerArray, if
the previous skymodel has to be updated, delete the contents of
the previous iteration and then store the current contents

From 5378176 (master), 3f7d3bc (parabolic-cylinder):
===================================================

(*) Merge master branch onto parabolic-cylinder

From 6cd37a7 (master):
=====================

(*) Add 21cmforest codes under prisim/examples/codes/21cmforest/

From 6418179 (master):
=====================

In scripts/run_prisim.py,

(*) Add support for processing NVSS catalog as sky model

From 7daa921 (gmrt):
===================

In prisim/examples/simparms/defaultparms.yaml,

(*) Add support for 'ugmrt' as a telescope id 

In prisim/examples/simparms/defaultparms_dev.yaml,

(*) Add support for 'ugmrt' as a telescope id

In scripts/run_prisim.py,

(*) Add support for 'ugmrt' as a telescope id

In prisim/interferometry.py,

(*) Update docstrings to indicate support for 'ugmrt' as a telescope id

In prisim/primary_beams.py,

(*) In function primary_beam_generator(), add support for 'ugmrt' as a
telescope id
(*) In function GMRT_primary_beam(), add input keyword instrument that
can support 'gmrt' (default) or 'ugmrt' and provide corresponding
polynomial coefficients for the primary beam. Update function docstring
accordingly
(*) In function GMRT_primary_beam(), check for NaN values and raise a
ValueError if NaN values found

From 8061bbd (master):
=====================

In prisim/primary_beams.py,

(*) In functions VLA_primary_beam() and GMRT_primary_beam(), check if
the returned primary beam exceeds unity and raise ValueError if it